// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - FinalPage renders correctly if submit fail 1`] = `
<section
  className="sc-bdVaJa sc-bxivhb hCqsPe"
>
  <p
    className="sc-htpNat jfeDHX"
    color="#E74536"
  >
    Error occured: error occured
  </p>
</section>
`;

exports[`COMPONENT - FinalPage renders correctly if submit success 1`] = `
<section
  className="sc-bdVaJa sc-bxivhb hCqsPe"
>
  <h1
    className="sc-bwzfXH fIpTJf StyledHeading-sc-1rdh4aw-0 iDyXcl"
  >
    Thank you for taking the time to complete this survey.
  </h1>
</section>
`;
